# ai-trace-datasets

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.sh
.claude/: settings.local.json
backend/: .env.dev  docker-compose.yml  lint.sh  pyproject.toml
backend/src/ai_trace_datasets/: main.py  run_local.py
backend/src/ai_trace_datasets/core/db/: async_session.py
backend/src/ai_trace_datasets/core/dependencies/: auth.py  role_check.py
backend/src/ai_trace_datasets/core/mappers/: image_mapper.py
backend/src/ai_trace_datasets/core/models/: dataset.py  feature_flag.py  images.py  key_management.py  organization.py  test_run.py  user.py
backend/src/ai_trace_datasets/core/repositories/: api_key.py  datasets.py  datasets_images.py  feature_flags.py  organization_repository.py  user_repository.py
backend/src/ai_trace_datasets/core/routes/: admin_users.py  datasets.py  datasets_images.py  datasets_tests.py  feature_flags.py  health.py  images_preview.py  key_management.py  user_auth.py
backend/src/ai_trace_datasets/core/schemas/: admin_users.py  dataset_schema.py  datasets.py  feature_flags.py  images.py  key_management.py  user_auth.py
backend/src/ai_trace_datasets/core/services/: ai_service.py  dataset_export.py  dataset_schemas.py  datasets_images.py  organization.py
backend/src/ai_trace_datasets/core/settings/: config.py
backend/src/ai_trace_datasets/core/storage/: base_storage.py  gcloud_storage.py  local_storage.py  storage_provider.py  utils.py
backend/src/ai_trace_datasets/ee/controller/: token_exchange.py
backend/src/migrations/: create_models_local.py
database/: schema.sql
frontend/: .env.example  bun.lockb  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.ts  main.tsx
frontend/src/router/: index.ts
frontend/src/services/: api.ts  authService.ts  datasetService.ts  rowService.ts  schemaService.ts  userService.ts
frontend/src/stores/: authStore.ts  datasetStore.ts  schemaStore.ts
frontend/src/types/: index.ts
implementation/specs/: AUTHENTICATION.md  BACKEND_specs.md  DATASET.md  FOLDER_STRUCTURE.md  FRONTEND.md  OPEN_CLOSED.md  PACKAGING.md
nginx/: app.conf.template
src/aitrace/: __init__.py  main.py  run_local.py
(+81 files in other folders)
